# my-rcore-os

./: README.md  verification.md
docs/: AI使用报告.md  b-deliverables.md  comparison.md  design_report.md  project_description.md  test_cases.md  verification.md
tg-rcore-trace/: Cargo.toml
tg-rcore-trace/src/: lib.rs
tg-rcore-tutorial-ch1/: .gitrepo  Cargo.toml  README.md
tg-rcore-tutorial-ch1/src/: main.rs
tg-rcore-tutorial-ch2/: .gitignore  .gitrepo  Cargo.toml  README.md  build.rs  test.sh
tg-rcore-tutorial-ch2/.cargo/: config.toml
tg-rcore-tutorial-ch2/src/: main.rs
tg-rcore-tutorial-ch3/: .gitrepo  Cargo.toml  README.md  build.rs  exercise.md  test.sh
tg-rcore-tutorial-ch3/.cargo/: config.toml
tg-rcore-tutorial-ch3/src/: main.rs  task.rs  task.rs.save
tg-rcore-tutorial-ch4/: .gitrepo  Cargo.toml  README.md  build.rs  exercise.md  test.sh
tg-rcore-tutorial-ch4/src/: main.rs  process.rs
tg-rcore-tutorial-ch5/: .gitrepo  Cargo.toml  README.md  build.rs  exercise.md  test.sh
tg-rcore-tutorial-ch5/.cargo/: config.toml
tg-rcore-tutorial-ch5/src/: main.rs  process.rs  processor.rs
tg-rcore-tutorial-checker/: .gitrepo  Cargo.toml  README.md  sysdeps.txt
tg-rcore-tutorial-checker/src/: checker.rs  main.rs
tg-rcore-tutorial-checker/src/cases/: ch2.rs  ch3.rs  ch4.rs  ch5.rs  ch6.rs  ch7.rs  ch8.rs  mod.rs
tg-rcore-tutorial-easy-fs/: .gitignore  .gitrepo  Cargo.toml  README.md  sysdeps.txt
tg-rcore-tutorial-easy-fs/src/: bitmap.rs  block_cache.rs  block_dev.rs  efs.rs  file.rs  layout.rs  lib.rs  pipe.rs  vfs.rs
tg-rcore-tutorial-kernel-alloc/: .gitrepo  Cargo.toml  README.md  sysdeps.txt
tg-rcore-tutorial-kernel-alloc/src/: lib.rs
tg-rcore-tutorial-kernel-context/: .gitrepo  Cargo.toml  README.md  sysdeps.txt
tg-rcore-tutorial-kernel-context/src/: lib.rs
tg-rcore-tutorial-kernel-context/src/foreign/: mod.rs  multislot_portal.rs
tg-rcore-tutorial-kernel-vm/: .gitrepo  Cargo.toml  README.md  sysdeps.txt
tg-rcore-tutorial-kernel-vm/src/: lib.rs
tg-rcore-tutorial-kernel-vm/src/space/: mapper.rs  mod.rs  visitor.rs
tg-rcore-tutorial-linker/: .gitrepo  Cargo.toml  README.md  sysdeps.txt
tg-rcore-tutorial-linker/src/: app.rs  lib.rs
tg-rcore-tutorial-sbi/: .gitignore  .gitrepo  Cargo.toml  README.md  sysdeps.txt  systest.sh  systest.txt  systest_sbi.txt
tg-rcore-tutorial-sbi/src/: lib.rs  m_entry.asm  msbi.rs
tg-rcore-tutorial-task-manage/: .gitrepo  Cargo.toml  README.md  sysdeps.txt
tg-rcore-tutorial-task-manage/src/: id.rs  lib.rs  manager.rs  proc_manage.rs  proc_rel.rs  proc_thread_rel.rs  scheduler.rs  thread_manager.rs
tg-rcore-tutorial-user/: Cargo.toml  cases.toml
