[package]
name = "tg-rcore-tutorial-easy-fs"
description = "A simple filesystem implementation for rCore tutorial OS."
version = "0.4.8"
edition = "2024"
authors = ["Yifan Wu <shinbokuow@163.com>"]
repository = "https://github.com/rcore-os/tg-rcore-tutorial-easy-fs"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial-easy-fs/tree/test"
documentation = "https://docs.rs/tg-rcore-tutorial-easy-fs"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "filesystem", "no-std", "riscv"]
categories = ["no-std", "embedded", "filesystem"]

[dependencies]
spin = "0.9"
bitflags = "1.2"
