[package]
name = "tg-rcore-tutorial-kernel-context"
description = "Kernel context management for rCore tutorial OS, including task context switching."
version = "0.4.8"
edition = "2024"
authors = ["YdrMaster <ydrml@hotmail.com>"]
homepage = "https://github.com/rcore-os/tg-rcore-tutorial-kernel-context/tree/test"
repository = "https://github.com/rcore-os/tg-rcore-tutorial-kernel-context"
documentation = "https://docs.rs/tg-rcore-tutorial-kernel-context"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "kernel", "context", "riscv"]
categories = ["no-std", "embedded"]

[features]
foreign = ["spin"]

[package.metadata.docs.rs]
targets = ["riscv64gc-unknown-none-elf"]

[dependencies]
spin = { version = "0.9", optional = true }
