[package]
name = "tg-rcore-tutorial-kernel-vm"
description = "Kernel virtual memory management for rCore tutorial OS."
version = "0.4.8"
edition = "2024"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/rcore-os/tg-rcore-tutorial-kernel-vm"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial-kernel-vm/tree/test"
documentation = "https://docs.rs/tg-rcore-tutorial-kernel-vm"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "kernel", "virtual-memory", "riscv"]
categories = ["no-std", "embedded", "memory-management"]

[dependencies]
spin = "0.9"
page-table = "0.0.6"
