[package]
name = "tg-rcore-tutorial-sbi"
description = "SBI (Supervisor Binary Interface) call wrappers for rCore tutorial OS."
version = "0.4.9"
edition = "2024"
authors = ["WangYifan <w-yf22@mails.tsinghua.edu.cn>", "QinFeiran<qfr23@mails.tsinghua.edu.cn>"]
repository = "https://github.com/rcore-os/tg-rcore-tutorial-sbi"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial-sbi/tree/test"
documentation = "https://docs.rs/tg-rcore-tutorial-sbi"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "sbi", "no-std", "riscv"]
categories = ["no-std", "embedded"]

[features]
default = []
nobios = []

[package.metadata.docs.rs]
targets = ["riscv64gc-unknown-none-elf"]

[dependencies]
