[package]
name = "tg-rcore-tutorial-task-manage"
description = "Task and process management for rCore tutorial OS, including scheduling and relationships."
version = "0.4.8"
edition = "2024"
authors = ["zflcs <zhaofangliang@foxmail.com>"]
repository = "https://github.com/rcore-os/tg-rcore-tutorial-task-manage"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial-task-manage/tree/test"
documentation = "https://docs.rs/tg-rcore-tutorial-task-manage"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "task", "scheduler", "riscv"]
categories = ["no-std", "embedded"]

[features]
proc = []
thread = []
